--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -521,6 +521,16 @@ svg, svg path {
   border: 0 !important;
 }
 
+.o-main {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 40.063em) {
+  .o-main__about {
+    order: 1;
+  }
+}
+
 .o-row {
   width: 100%;
   margin-top: calc(1rem * 1);
@@ -621,6 +631,16 @@ svg, svg path {
   justify-content: center;
 }
 
+.o-about__inner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.o-about__inner p {
+  text-align: center;
+}
+
 .o-currencygrid {
   padding-top: 2.2rem;
   padding-bottom: 2.2rem;
@@ -640,7 +660,7 @@ svg, svg path {
   }
 }
 
-.cookie-banner {
+.o-cookie-banner {
   position: fixed;
   left: 0;
   bottom: 0;
@@ -655,7 +675,7 @@ svg, svg path {
   background-color: black;
 }
 @media screen and (min-width: 40.063em) {
-  .cookie-banner {
+  .o-cookie-banner {
     left: 3rem;
     bottom: 3rem;
     padding: 0.5em;
@@ -666,30 +686,16 @@ svg, svg path {
     background-color: #151515;
   }
 }
-.cookie-banner__notice {
+.o-cookie-banner__notice {
   text-align: center;
 }
 @media screen and (min-width: 40.063em) {
-  .cookie-banner__notice {
+  .o-cookie-banner__notice {
     text-align: left;
   }
 }
-.cookie-banner__button {
+.o-cookie-banner__button {
   flex-shrink: 0;
-  background: #D67600;
-  color: black;
-  padding: 0.5em;
-  font-family: "DM Sans", sans-serif;
-  font-size: 1.2rem;
-  line-height: 1.2;
-  font-variation-settings: "wght" 700, "opsz" 9;
-}
-.cookie-banner__button:hover {
-  background-color: #f7931a;
-}
-.cookie-banner__button:focus-visible {
-  outline: 2px solid #00E0FF;
-  outline-offset: 2px;
 }
 
 .o-footer {
@@ -761,7 +767,6 @@ svg, svg path {
   font-family: "Bebas Neue", sans-serif;
   font-size: 2.6rem;
   line-height: 1;
-  font-variation-settings: "wght" 700;
   color: white;
   text-align: right;
   display: block;
@@ -809,7 +814,6 @@ svg, svg path {
   font-family: "Bebas Neue", sans-serif;
   font-size: 2.6rem;
   line-height: 1;
-  font-variation-settings: "wght" 700;
   font-size: 4.6rem;
 }
 .c-logo-lockup__subtitle {
@@ -860,31 +864,18 @@ svg, svg path {
   font-size: 1rem;
 }
 
-.e-button {
-  font-weight: 600;
-  font-size: 3rem;
-  font-size: 1.4rem;
-  position: relative;
-  display: inline-block;
-  width: auto;
-  padding: 1em 1.2em;
-  border: 1px solid #00E0FF;
-  color: white;
-  text-align: center;
+.c-button, .o-cookie-banner__button {
+  font-variation-settings: "wght" 700, "opsz" 9;
   text-transform: uppercase;
-  cursor: pointer;
-  transition-duration: 0.2s;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.8, 0, 0.3, 1);
-}
-.e-button:hover {
-  color: #00E0FF;
-}
-.e-button:active {
-  color: #00E0FF;
-}
-.e-button:focus {
+  font-size: 1.2rem;
+  background: #D67600;
   color: black;
-  background: #00E0FF;
-  outline: none;
+  padding: 0.4em 0.8em;
+}
+.c-button:hover, .o-cookie-banner__button:hover {
+  background-color: #f7931a;
+}
+.c-button:focus-visible, .o-cookie-banner__button:focus-visible {
+  outline: 2px solid #00E0FF;
+  outline-offset: 2px;
 }
